Orquestração/ingress_example/path_example/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1
  labels:
    app: nginx-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - image: public.ecr.aws/f6e8d9s2/app1
        name: nginx-app1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
  selector:
    app: nginx-app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app2
  labels:
    app: nginx-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app2
  template:
    metadata:
      labels:
        app: nginx-app2
    spec:
      containers:
      - image: public.ecr.aws/f6e8d9s2/app2
        name: nginx-app2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
  selector:
    app: nginx-app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game1
  labels:
    app: game1 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: game1 
  template:
    metadata:
      labels:
        app: game1 
    spec:
      containers:
      - image: alexwhen/docker-2048
        name: app-2048
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: game1-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
  selector:
    app: game1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: app
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-service 
                port:
                  number: 80 
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
          - path: /
            pathType: Exact
            backend: 
              service: 
                name: game1-service
                port:
                  number: 80
